fixed content having empty side bar on mobile devices

--- a/Components/Splash/Splash.module.scss
+++ b/Components/Splash/Splash.module.scss
@@ -7,7 +7,6 @@
 .splash {
   @include disFlex;
 
-  z-index: -1;
   height: 100vh;
   width: auto;
   background-image: url("../../public/sky.jpg");
